test/error/union_array_empty.gw
union
{
  int i;
  int array[4];
};
